--- a/essay/src/cover.tex
+++ b/essay/src/cover.tex
@@ -27,11 +27,11 @@
     \end{figure}
 
     % Add some vertical padding %
-    \vspace{2cm}
+    \vspace{1.5cm}
 
     % Author of the essay %
     \textsc{\Large
-      AUTHOR: CANIS LUPUS
+      AUTHOR OF THE PUBLICATION
     }
 
   \end{center}
