--- a/essay/template.tex
+++ b/essay/template.tex
@@ -1,17 +1,13 @@
 % !TEX TS-program = xelatex
 % !TEX encoding = UTF-8 Unicode
 
-% --------------
-% START OF ESSAY
-% --------------
+% Define document font, paper size and type %
 \documentclass[12pt,a4paper]{scrreprt}
 
-
-% Commands
+% Custom commands %
 \newcommand{\HRule}{\rule{\linewidth}{0.5mm}}
 
-
-% Packages
+% Packages to be used %
 \usepackage{fontspec}
 \usepackage{eurosym}
 \usepackage{amssymb}
@@ -30,15 +26,15 @@
             urlcolor=blue,
             linkcolor=black]{hyperref}
 
-% Path for the images
+% Path for all graphic utilities %
 \usepackage{graphicx}
 \graphicspath{{fig/}}
 
-% Number figures, tables and equations within sections
+% Number figures, tables and equations within sections %
 \numberwithin{equation}{section}
 \numberwithin{figure}{section}
 
-% Properly place figures %
+% Properly place figures, similar to {figure}[h] %
 \usepackage{float}
 \let\origfigure\figure
 \let\endorigfigure\endfigure
@@ -48,9 +44,8 @@
     \endorigfigure
 }
 
-
-% Polyglossia settings
-\setmainlanguage{english} % or danish
+% Polyglossia settings %
+\setmainlanguage{english}
 \addto\captionsenglish{%
   \renewcommand{\contentsname}{Table of Contents}
 }
@@ -58,54 +53,49 @@
   \renewcommand{\contentsname}{Indholdsfortegnelse}
 }
 
-
-% Required for syntax highlighting
+% Required for syntax highlighting %
 $highlighting-macros$
 
-
-% Don't let images overflow the page
-% Can still explicit set width/height/options for an image
+% Don't let images overflow the page %
+% Can still explicit set width/height/options for an image %
 \makeatletter
 \def\maxwidth{\ifdim\Gin@nat@width>\linewidth\linewidth\else\Gin@nat@width\fi}
 \def\maxheight{\ifdim\Gin@nat@height>\textheight\textheight\else\Gin@nat@height\fi}
 \makeatother
 \setkeys{Gin}{width=\maxwidth,height=\maxheight,keepaspectratio}
 
-
-% Make links footnotes instead of hotlinks
+% Make links footnotes instead of hotlinks %
 \renewcommand{\href}[2]{#2\footnote{\url{#1}}}
 
-
-% Avoid problems with \sout in headers with hyperref:
+% Avoid problems with \sout in headers with hyperref %
 \pdfstringdefDisableCommands{\renewcommand{\sout}{}}
 
-
-% No paragraph indentation
-% and set space between paragraphs
+% No paragraph indentation and set space between paragraphs %
 \setlength{\parindent}{0pt}
 \setlength{\parskip}{1em plus 2pt minus 1pt}
 \setlength{\emergencystretch}{3em}  % prevent overfull lines
 
-
-% -----------------
-%  END OF PREAMBLE
-% -----------------
+%--- DOCUMENT IS DEFINED BELOW THIS LINE ---%
 \begin{document}
 
 % Switch off page numbering %
 \pagenumbering{gobble}
 
+% Append cover and prologue to actual document %
 \input{src/cover}
 \input{src/prologue}
 
-% chapter: 0, section: 1, subsection: 2 etc
+% Controls document content depth by changing number: 0="chapter", 1="section" %
 \setcounter{secnumdepth}{2}
 \setcounter{tocdepth}{2}
 
 % Start the table of contents and page numbering %
 \tableofcontents
 
+% Turn on again page numbering %
 \pagenumbering{arabic}
+
+% Add rest of content source files %
 $body$
 
 \end{document}
