--- a/essay_template/{{cookiecutter.project_name}}/src/cover.tex
+++ b/essay_template/{{cookiecutter.project_name}}/src/cover.tex
@@ -12,13 +12,17 @@
       % Apply font size and color %
       \fontsize{60pt}{70pt}\selectfont
       \textcolor{titlecolor}
-      {TITLE OF THE ESSAY}\\[2cm]
+        {
+          {{cookiecutter.title_essay}}
+	}
+	\\[2cm]
     }
 
     % Subtitle of the essay %
     \textsc{\huge
-      SUBTITLE OF THE ESSAY
-    }\\[4cm]
+	  {{cookiecutter.subtitle_essay}}
+    }
+    \\[4cm]
 
     % Add cover logo %
     \begin{figure}[h]
@@ -31,7 +35,7 @@
 
     % Author of the essay %
     \textsc{\Large
-      AUTHOR OF THE PUBLICATION
+      {{cookiecutter.author_essay}}
     }
 
   \end{center}
