--- a/essay_template/{{cookiecutter.project_name}}/template.tex
+++ b/essay_template/{{cookiecutter.project_name}}/template.tex
@@ -85,6 +85,16 @@ $highlighting-macros$
 \setlength{\parskip}{1em plus 2pt minus 1pt}
 \setlength{\emergencystretch}{3em}  % prevent overfull lines
 
+% Enable references and bibliography
+$if(csl-refs)$
+\newlength{\cslhangindent}
+\setlength{\cslhangindent}{1.5em}
+\newenvironment{cslreferences}%
+  {$if(csl-hanging-indent)$\setlength{\parindent}{0pt}%
+  \everypar{\setlength{\hangindent}{\cslhangindent}}\ignorespaces$endif$}%
+  {\par}
+$endif$
+
 %--- DOCUMENT IS DEFINED BELOW THIS LINE ---%
 \begin{document}
 
