--- a/essay_template/{{cookiecutter.project_name}}/src/ch01.md
+++ b/essay_template/{{cookiecutter.project_name}}/src/ch01.md
@@ -1,4 +1,4 @@
-\chapter{How to download and install}
+\chapter{How to install and use}
 
 In this chapter you will learn how to build your own volume/essay from scratch
 by making use of available **essay template** under
@@ -85,6 +85,36 @@ On the other hand, the `template.tex` file controls all necessary LaTeX
 variables such us used packages or defined commands. You can modify this file as
 you wish to increase customization capabilities.
 
+The `highlight.theme` file controls code snippets style. Modify it as you wish
+to adapt your needs.
+
+The `biblio.bib` and `bibliography.md` control this particular section of the
+report. Add your references inside the `*.bib` one. They will be automatically
+rendered, so the `bibliography.md` is used to add any kind of additional
+information before presenting all references.
+
 Finally, a Makefile automation file is also provided to execute particular
 commands and task in an easy way. This file lets you render a final PDF file by
 simply running in your command line the `make` command.
+
+Features of this template
+=========================
+
+Among the different features, user can make use of code highlighting:
+
+```c
+#include <stdio.h>
+
+int main(){
+  printf("Hello world!\n");
+  return 0;
+}
+```
+
+You can also add inline mathematical equations like $x=1$ or centered ones:
+
+$$
+f(x) = ax^{2} + bx + c
+$$
+
+Finally, for references make use of `@item1`.
