Separate title creation

--- a/article_template/{{cookiecutter.project_name}}/src/ch01.md
+++ b/article_template/{{cookiecutter.project_name}}/src/ch01.md
@@ -1,10 +1,3 @@
-\chapter{How to install and use}
-
-In this chapter you will learn how to build your own volume/essay from scratch
-by making use of available **essay template** under
-[TSUNDOKU](https://github.com/jorgepiloto/tsundoku/) repository. 
-
-
 Installing dependencies
 =======================
 
@@ -126,4 +119,5 @@ $$
 
 Cool references
 ---------------
-Finally, for references make use of `@item1`.
+Finally, for references make use of `@item1`. For example, this is a reference
+to item2, see @item2.
