--- a/article_template/{{cookiecutter.project_name}}/template.tex
+++ b/article_template/{{cookiecutter.project_name}}/template.tex
@@ -108,36 +108,7 @@ $endif$
 \fancyhead[C]{Custom header} % Custom header text
 \fancyfoot[RO,LE]{\thepage} % Custom footer text
 
-%----------------------------------------------------------------------------------------
-%	TITLE SECTION
-%----------------------------------------------------------------------------------------
-
-\setlength{\droptitle}{-4\baselineskip} % Move the title up
-
-\pretitle{\begin{center}\Huge\bfseries} % Article title formatting
-\posttitle{\end{center}} % Article title closing formatting
-\title{Corrections to the U.S. Standard Atmosphere 1976 model} % Article title
-\author{%
-\textsc{John Smith}\\[1ex] % Your name
-\normalsize Undergraduate Aerospace Engineer \\ % Your institution
-\normalsize \href{mailto:john@smith.com}{john@smith.com} % Your email address
-%\and % Uncomment if 2 authors are required, duplicate these 4 lines if more
-%\textsc{Jane Smith}\thanks{Corresponding author} \\[1ex] % Second author's name
-%\normalsize University of Utah \\ % Second author's institution
-%\normalsize \href{mailto:jane@smith.com}{jane@smith.com} % Second author's email address
-}
-\date{\today} % Leave empty to omit a date
-\renewcommand{\maketitlehookd}{%
-\begin{abstract}
-	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin cursus
-	aliquam turpis, et vulputate arcu laoreet ac. Donec nec metus ornare leo
-	tempor vehicula. Nam sit amet porttitor felis. Sed tristique ullamcorper
-	imperdiet. Nulla rhoncus vestibulum dolor sit amet mattis. Donec nisi
-	quam, venenatis vitae sem id, ullamcorper sollicitudin elit. Curabitur
-	maximus velit tempus felis scelerisque, nec mattis est tincidunt.
-	Pellentesque nec cursus quam. Ut in lacus vitae enim egestas dignissim.
-\end{abstract}
-}
+\input{src/title.tex}
 
 
 %--- DOCUMENT IS DEFINED BELOW THIS LINE ---%
