--- a/article_template/{{cookiecutter.project_name}}/src/title.tex
+++ b/article_template/{{cookiecutter.project_name}}/src/title.tex
@@ -2,18 +2,22 @@
 
 \pretitle{\begin{center}\Huge\bfseries} % Article title formatting
 \posttitle{\end{center}} % Article title closing formatting
-\title{Corrections to the U.S. Standard Atmosphere 1976 model} % Article title
-\author{%
-\textsc{John Smith}\\[1ex] % Your name
-\normalsize Undergraduate Aerospace Engineer \\ % Your institution
-\normalsize \href{mailto:john@smith.com}{john@smith.com} % Your email address
+\title{
+  {{cookiecutter.title_article}}
+} % Article title
+\author{
+\textsc{
+	  {{cookiecutter.author_name}}
+}\\[1ex] % Your name
+\normalsize Your institution or role \\
+\normalsize {{cookiecutter.author_email}}
 %\and % Uncomment if 2 authors are required, duplicate these 4 lines if more
 %\textsc{Jane Smith}\thanks{Corresponding author} \\[1ex] % Second author's name
 %\normalsize University of Utah \\ % Second author's institution
 %\normalsize \href{mailto:jane@smith.com}{jane@smith.com} % Second author's email address
 }
 \date{\today} % Leave empty to omit a date
-\renewcommand{\maketitlehookd}{%
+\renewcommand{\maketitlehookd}{
 \begin{abstract}
 	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin cursus
 	aliquam turpis, et vulputate arcu laoreet ac. Donec nec metus ornare leo
