Update author of the publication

--- a/article_template/{{cookiecutter.project_name}}/src/title.tex
+++ b/article_template/{{cookiecutter.project_name}}/src/title.tex
@@ -9,14 +9,12 @@
 \textsc{
 	  {{cookiecutter.author_name}}
 }\\[1ex] % Your name
-\normalsize Your institution or role \\
+\normalsize {{cookiecutter.author_role}} \\
 \normalsize {{cookiecutter.author_email}}
-%\and % Uncomment if 2 authors are required, duplicate these 4 lines if more
-%\textsc{Jane Smith}\thanks{Corresponding author} \\[1ex] % Second author's name
-%\normalsize University of Utah \\ % Second author's institution
-%\normalsize \href{mailto:jane@smith.com}{jane@smith.com} % Second author's email address
 }
+
 \date{\today} % Leave empty to omit a date
+
 \renewcommand{\maketitlehookd}{
 \begin{abstract}
 	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin cursus
