Enable publication title

--- a/article_template/{{cookiecutter.project_name}}/src/title.tex
+++ b/article_template/{{cookiecutter.project_name}}/src/title.tex
@@ -13,7 +13,9 @@
 \normalsize {{cookiecutter.author_email}}
 }
 
-\date{\today} % Leave empty to omit a date
+\date{
+  {{cookiecutter.date_article}}
+} % Leave empty to omit a date
 
 \renewcommand{\maketitlehookd}{
 \begin{abstract}
