Add example on reference

--- a/essay_template/{{cookiecutter.project_name}}/src/ch01.md
+++ b/essay_template/{{cookiecutter.project_name}}/src/ch01.md
@@ -126,4 +126,5 @@ $$
 
 Cool references
 ---------------
-Finally, for references make use of `@item1`.
+Finally, for references make use of `@item1`. For example, this is a reference
+^[@item1].
