--- a/article_template/{{cookiecutter.project_name}}/tex/template.tex
+++ b/article_template/{{cookiecutter.project_name}}/tex/template.tex
@@ -112,7 +112,7 @@ $endif$
 \fancyhead[C]{Custom header} % Custom header text
 \fancyfoot[RO,LE]{\thepage} % Custom footer text
 
-\input{src/title.tex}
+\input{title.tex}
 
 
 %--- DOCUMENT IS DEFINED BELOW THIS LINE ---%
