Place LaTeX files in tex/

--- a/essay_template/{{cookiecutter.project_name}}/tex/template.tex
+++ b/essay_template/{{cookiecutter.project_name}}/tex/template.tex
@@ -102,8 +102,8 @@ $endif$
 \pagenumbering{gobble}
 
 % Append cover and prologue to actual document %
-\input{src/cover}
-\input{src/prologue}
+\input{tex/cover}
+\input{tex/prologue}
 
 % Controls document content depth by changing number: 0="chapter", 1="section" %
 \setcounter{secnumdepth}{2}
