Update bib commands

--- a/essay_template/{{cookiecutter.project_name}}/src/ch01.md
+++ b/essay_template/{{cookiecutter.project_name}}/src/ch01.md
@@ -126,5 +126,10 @@ $$
 
 Cool references
 ---------------
-Finally, for references make use of `@item1`. For example, this is a reference
-^[@item1].
+
+There are several ways to cite your lines by making use of different commands.
+For example, you can write the following next to your words:
+
+* `[@item1]` is a direct reference, like this [@item1]
+* `^[@item2]` is a foot note reference, like this ^[@item2]
+* `[-@item3]` is a year reference, like this [-@item3]
